test_regress/t/t_func_wide_out_bad.out
%Error: t/t_func_wide_out_bad.v:17:12: Unsupported: Function output argument 'data' requires 4352 bits, but connection's VARREF 'msg' generates 4350 bits.
                                     : ... In instance t
      func(msg);
           ^~~
%Error: Exiting due to
